@@ -27,6 +27,7 @@ Version 1.11.10+dev:
  * Miscellaneous and bug fixes:
    * Units can no longer be moved in linger mode (bug #21450).
    * Changed: Updated valgrind suppression file.
+   * Fixed color issues with font_rgb in unit status labels in themes.
    * Labels are now removed when shroud/fog is removed, rather than waiting
      for a new turn (bug #21434).
    * Percent signs show when describing traits that increase damage or attacks
